# db-swufe

./: .gitignore  README.md  project.md
00_test/: README.md
02_relational_model/: README.md  exercise.md
03_basic_sql/: README.md  constant.md  exercise.md
04_lab_sql/: README.md  duckdb-web.md
05_sql/: README.md  link.md  quiz.md
06_sql/: README.md  data  generate_data.py  quiz.md
07_sql/: README.md  deprecated-README.md  quiz.md
08_er/: README.md
09_types/: README.md  deprecated-README.md
10_advanced/duckdemo/: generate_large_parquet.py  main.py  pyproject.toml
10_advanced/java-demo/: build.gradle
10_advanced/python-demo/: README.md  main.py
10_advanced/python-orm/: README.md  main-core.py  main-orm.py
11_app/: README.md  index.html
11_app/fastapi-demo/: README.md  main.py  pyproject.toml
11_app/pg-flask/: app.py
11_app/pg-flask/templates/: result.html
11_app/servlet_demo/: build.gradle  settings.gradle
11_app/simple-flask/: app.py  hello.py
11_app/simple-flask/templates/: 404.html  (+2 more)
12_theory/: README.md
db-book/: DDL.sql  Duck-DDL+drop.sql  Duck-DDL.sql  western-europe.csv
projects/: challenge-2025.md  project-2025.md  project-2026.md  self.md
slides/: .gitignore  .latexmkrc  Makefile  quiz.tex  template.tex  week0.tex  week1-intro.tex  week1.tex  week10_design.tex  week11_norm.tex  week12_theory.tex  week2-relational-model.tex  week2.tex  week3-sql.tex  week3.tex  week4-lab.tex  week4.tex  week5-null-aggregate.tex  week5.tex  week6-change.tex  week7-join.tex  week8_advanced.tex  week9_advanced.tex
slides/image/: system.tex
(+7 files in other folders)
